--- a/HW6/style.css
+++ b/HW6/style.css
@@ -50,7 +50,80 @@
  .hamburger {
     height: 23px;
     width: 32px;
+    cursor: pointer;
  }
+
+ .h__summary {
+   display: block;
+ }
+ 
+.h__summary::-webkit-details-marker {
+   display: none;
+ }
+ 
+ .h__summary::before {
+   content: url(img/header__hamburger__img.svg);
+   padding-right: 0.5em;
+ }
+ 
+ details[open] > summary::before {
+   content: url(img/header__hamburger__img.svg);
+ }
+ 
+ .h__menu {
+   width: 232px;
+   height: 634px;
+   margin-top: 20px;
+   margin-left: 167px;
+   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+   background-color: #FFFFFF;
+   display: flex;
+   flex-direction: column;
+ }
+
+ .menu__title {
+   width: 55px;
+   height: 17px;
+   margin-top: 32px;
+   margin-left: 33px;
+   font-family: 'Lato';
+   font-style: normal;
+   font-weight: 700;
+   font-size: 14px;
+   line-height: 17px;
+   color: #000000;
+ }
+
+ .menu_elements {
+   margin-top: 4px;
+   margin-left: 32px;
+ }
+
+ .menu_category {
+   margin-top: 20px;
+   margin-bottom: 12px;
+   font-family: 'Lato';
+   font-style: normal;
+   font-weight: 400;
+   font-size: 14px;
+   line-height: 17px;
+   color: #F16D7F;
+ }
+
+.category__item {
+   margin-left: 22px;
+   margin-top: 11px;
+} 
+
+.menu__lnk {
+   text-decoration: none;
+   font-family: 'Lato';
+   font-style: normal;
+   font-weight: 400;
+   font-size: 14px;
+   line-height: 17px;
+   color: #6F6E6E;
+}
 
  .user {
     height: 29px;
@@ -303,8 +376,30 @@
 }
 
 .cb__image {
+   display: inline-block;
+   cursor: pointer;
    width: 360px;
    height: 420px;
+   position: relative;
+}
+
+.cb__image::before {
+   display: block; 
+   content:""; 
+   position: absolute; 
+   z-index: 1;
+   top:0;
+   bottom: 0;
+   left: 0;
+   right: 0; 
+   background: url(img/hover_360_420.svg);
+   opacity: 0;
+   -webkit-transition: 0.3s;
+   transition: 0.3s;
+}
+
+.cb__image:hover::before {
+   opacity: 1;
 }
 
 .title__and__price {
@@ -346,7 +441,7 @@
    width: 212px;
    height: 48px;
    margin-top: 48px;
-   margin-bottom: 60px;
+   margin-bottom: 95px;
    font-family: 'Lato';
    font-style: normal;
    font-weight: 400;
@@ -356,6 +451,225 @@
    border-color: #FF6A6A;
    border-width: 1px;
    background-color: #FFFFFF;
+}
+
+.db__button:hover {
+   background-color: #F16D7F;
+   color: #FFFFFF;
+}
+
+.services {
+   height: 341px;
+   background-color: #222224;
+   display: flex;
+   gap: 30px;
+}
+
+.service__block {
+   width: 360px;
+   height: 134px;
+   margin-top: 103px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: space-between;
+}
+
+.service__block:first-child {
+   margin-left: 230px;
+}
+
+.services__img1 {
+   width: 45px;
+   height: 32px;
+}
+
+.services__img2 {
+   width: 40px;
+   height: 40px;
+}
+
+.services__img3 {
+   width: 47px;
+   height: 35px;
+}
+
+.service__subtitle {
+   font-family: 'Lato';
+   font-style: normal;
+   font-weight: 400;
+   font-size: 20px;
+   line-height: 24px;
+   color: #FBFBFB;
+}
+
+.service__text {
+   font-family: 'Lato';
+   font-style: normal;
+   font-weight: 300;
+   font-size: 14px;
+   line-height: 17px;
+   text-align: center;
+   color: #FBFBFB;
+}
+
+.subscribe__block {
+   height: 448px;
+   background-image: url(img/subscribe_img.svg);
+   display: flex;
+}
+
+.woman__and__block {
+   width: 360px;
+   height: 225px;
+   margin-top: 97px;
+   margin-left: 230px;
+   display: flex;
+   flex-direction: column;
+}
+
+.woman__img {
+   height: 96px;
+   width: 96px;
+   margin-left: 122px;
+   margin-bottom: 30px;
+}
+
+.wb__text {
+   width: 360px;
+   height: 99px;
+   font-family: 'Lato';
+   font-style: normal;
+   font-weight: 400;
+   font-size: 20px;
+   line-height: 24px;
+   text-align: center;
+   color: #222224;
+}
+
+.subscribe {
+   width: 557px;
+   height: 142px;
+   margin-top: 150px;
+   margin-left: 223px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content:start;
+}
+
+.sbscr__titles {
+   width: 557px;
+   height: 61px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: end;
+}
+
+.sbscr__title {
+   font-family: 'Lato';
+   font-style: normal;
+   font-weight: 700;
+   font-size: 24px;
+   line-height: 40px;
+   text-align: center;
+}
+
+.sbscr__subtitle {
+   font-family: 'Lato';
+   font-style: normal;
+   font-weight: 700;
+   font-size: 18px;
+   line-height: 30px;
+   text-align: center;
+}
+
+.sbscr__form {
+   width: 356px;
+   height: 49px;
+   margin-top: 32px;
+   display: flex;
+}
+
+.sbscr__email {
+   width: 256px;
+   height: 49px;
+   padding-left: 22px;
+   background-color: #E1E1E1;
+   border-top-left-radius: 20px;
+   border-bottom-left-radius: 20px;
+   border-width: 0;
+   font-family: 'Lato';
+   font-style: normal;
+   font-weight: 400;
+   font-size: 14px;
+   line-height: 17px;
+   color: #222224;
+   opacity: 0.67;
+}
+
+.sbscr__submit {
+   width: 100px;
+   height: 49px;
+   padding-right: 7px;
+   background-color: #F16D7F;
+   border-top-right-radius: 24px;
+   border-bottom-right-radius: 24px;
+   border-width: 0;
+   font-family: 'Lato';
+   font-style: normal;
+   font-weight: 400;
+   font-size: 14px;
+   line-height: 17px;
+   color: #FFFFFF;
+}
+
+.footer {
+   height: 79px;
+   padding-left: 235px;
+   padding-right: 230px;
+   background-color: #222224;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+}
+
+.copyright {
+   width: 332px;
+   height: 19px;
+   font-family: 'Lato';
+   font-style: normal;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 19px;
+   color: #FBFBFB;
+}
+
+.social__links {
+   width: 148px;
+   height: 32px;
+   display: flex;
+   justify-content: start;
+   gap: 7.29px;
+}
+
+.sl__icon__field {
+   width: 32px;
+   height: 32px;
+   background-color: #fff;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+
+.sl__icon__field:hover {
+   background-color: #F16D7F;
+   color: #FFFFFF;
+
+   .sl__icon path {
+      fill: #FFFFFF;
+   }
 }
 
 @media (max-width: 1024px) and (min-width: 768px) {
@@ -378,6 +692,10 @@
       margin-right: 32px;
    }
 
+   .h__menu {
+      margin-top: 16px;
+      margin-left: -30px; 
+   }
    
    .title__block__img {
       width: 386px;
@@ -486,6 +804,50 @@
       margin-top: 32px;
       margin-bottom: 48px;
    }
+
+   .services {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 610px;
+      gap: 48px;
+   }
+
+   .service__block:first-child {
+      margin-left: 0;
+      margin-top: 48px;
+   }
+
+   .service__block:last-child {
+      margin-bottom: 64px;
+   }
+
+   .service__block {
+      margin: 0;
+      padding: 0;
+   }
+
+   .subscribe__block {
+      height: 693px;
+      background-image: url(img/subscribe_img_tablet.svg);
+      flex-direction: column;
+      align-items: center;
+   }
+
+   .woman__and__block {
+      margin-left: 0;
+      margin-top: 64px;
+   }
+
+   .subscribe {
+      margin-top: 48px;
+      margin-left: 0;
+   }
+
+   .footer {
+      padding-left: 32px;
+      padding-right: 32px;
+   }
  
 }
 
@@ -513,6 +875,7 @@
       width: 32px;
    }
 
+   
    .user {
       height: 0px;
       width: 0px;
@@ -687,6 +1050,120 @@
       width: 212px;
       margin-top: 41px;
       margin-bottom: 85px;
+   }
+
+   .services {
+      height: 610px;
+      flex-direction: column;
+      align-items: center;
+      gap: 46px;
+   }
+
+   .service__block {
+      width: 348px;
+      height: 130px;
+      margin: 0;
+      padding: 0;
+   }
+
+   .service__block:first-child {
+      margin-left: 0px;
+      margin-top: 48px;
+   }
+
+   .services__img1 {
+      width: 44px;
+      height: 31px;
+   }
+
+   .services__img2 {
+      width: 39px;
+      height: 39px;
+   }
+
+   .services__img3 {
+      width: 46px;
+      height: 34px;
+   }
+
+   .subscribe__block {
+      height: 550px;
+      background-image: url(img/subscribe_img_phone.svg);
+      flex-direction: column;
+      align-items: center;
+   }
+
+   .woman__and__block {
+      width: 343px;
+      height: 194px;
+      margin-top: 64px;
+      margin-left: 0px;
+      align-items: center;
+   }
+
+   .woman__img {
+      height: 92px;
+      width: 92px;
+      margin-left: 0px;
+      margin-bottom: 0px;
+   }
+
+   .wb__text {
+      width: 343px;
+      height: 73px;
+      font-size: 18px;
+      line-height: 22px;
+   }
+
+   .subscribe {
+      width: 341px;
+      height: 123px;
+      margin-top: 59px;
+      margin-left: 0px;
+   }
+
+   .sbscr__titles {
+      width: 271px;
+      height: 54px;
+   }
+
+   .sbscr__title {
+      line-height: 37px;
+   }
+
+   .sbscr__subtitle {
+      font-size: 14px;
+      line-height: 22px;
+   }
+
+   .sbscr__form {
+      width: 341px;
+      height: 47px;
+      margin-top: 22px;
+   }
+
+   .sbscr__email {
+      width: 245px;
+      height: 47px;
+      padding-left: 21px;
+   }
+
+   .sbscr__submit {
+      width: 96px;
+      height: 47px;
+   }
+
+   .footer {
+      padding-top: 43px;
+      padding-bottom: 9px;
+      padding-left: 0px;
+      padding-right: 0px;
+      flex-direction: column-reverse;
+   }
+
+   .copyright {
+      width: 251px;
+      height: 19px;
    }
 
 }
