--- a/HW6/style.css
+++ b/HW6/style.css
@@ -3,6 +3,10 @@
     padding: 0;
  }
 
+ .main {
+   position: relative;
+ }
+
  
 .center {
     width: 1600px;
@@ -11,6 +15,8 @@
  
 
  .header {
+   position: absolute;
+   z-index: 1;
     height: 75px;
     background-color: #222222;
     display: flex;
@@ -72,8 +78,8 @@
  
  .h__menu {
    width: 232px;
-   height: 634px;
-   margin-top: 20px;
+   height: 653px;
+   margin-top: 19px;
    margin-left: 167px;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    background-color: #FFFFFF;
@@ -170,6 +176,7 @@
  }
 
  .title__block {
+    padding-top: 75px;
     background-color: #F1E4E6;
     display: flex;
     justify-content: space-between;
@@ -693,8 +700,8 @@
    }
 
    .h__menu {
-      margin-top: 16px;
-      margin-left: -30px; 
+      margin-top: 15px;
+      margin-left: -31px; 
    }
    
    .title__block__img {
@@ -875,6 +882,10 @@
       width: 32px;
    }
 
+   .h__menu {
+      margin-top: 19px;
+      margin-left: -184px; 
+   }
    
    .user {
       height: 0px;
